Added: User login, register, main page, table list for users.

--- a/public/packages/foundation-icons/preview.html
+++ b/public/packages/foundation-icons/preview.html
@@ -22,7 +22,7 @@
 
       a, 
       a:visited {
-        text-decoration: underline;
+        text-decoration: none;
       }
       a:hover, 
       a:focus { color: #000; }
