Major Changes #2 - Changed top New Applicant notification to sidebar, Theme - laravel, refresh div in new applicants, login & registration button.

--- a/public/packages/foundation-icons/preview.html
+++ b/public/packages/foundation-icons/preview.html
@@ -20,7 +20,9 @@
         font: 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
       }
 
-      a, 
+      a {
+        text-decoration: underline;
+      }
       a:visited {
         text-decoration: none;
       }
